--- a/pom.xml
+++ b/pom.xml
@@ -15,18 +15,12 @@
 
 		<cucumber.version>6.8.1</cucumber.version>
 		<selenium.version>3.141.59</selenium.version>
-
-		<!-- <junit.four.version>4.13</junit.four.version> -->
-		<!-- <junit.jupiter.version>5.7.0</junit.jupiter.version> -->
-
-		<!-- <restassured.version>4.3.1</restassured.version> -->
-		<!-- <googlesimplejson.version>1.1.1</googlesimplejson.version> -->
-
+		<apache.commons.io.version>2.8.0</apache.commons.io.version>
+	
 	</properties>
 
 	<dependencies>
 
-		<!-- SELENIUM -->
 		<!-- SELENIUM - https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -34,39 +28,7 @@
 			<version>${selenium.version}</version>
 		</dependency>
 
-		<!-- SELENIUM FIREFOX DRIVER - https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-firefox-driver -->
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-firefox-driver</artifactId>
-			<version>${selenium.version}</version>
-		</dependency>
 
-		<!-- SELENIUM CHROME DRIVER - https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-chrome-driver</artifactId>
-			<version>${selenium.version}</version>
-		</dependency>
-
-
-		<!-- SELENIUM IE DRIVER - https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-ie-driver -->
-		<!-- <dependency> <groupId>org.seleniumhq.selenium</groupId> <artifactId>selenium-ie-driver</artifactId> 
-			<version>${selenium.version}</version> </dependency> -->
-
-		<!-- SELENIUM SAFARI DRIVER - https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-safari-driver -->
-		<!-- <dependency> <groupId>org.seleniumhq.selenium</groupId> <artifactId>selenium-safari-driver</artifactId> 
-			<version>${selenium.version}</version> </dependency> -->
-
-		<!-- SELENIUM EDGE DRIVER - https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-edge-driver -->
-		<!-- <dependency> <groupId>org.seleniumhq.selenium</groupId> <artifactId>selenium-edge-driver</artifactId> 
-			<version>${selenium.version}</version> </dependency> -->
-
-		<!-- SELENIUM OPERA DRIVER - https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-opera-driver -->
-		<!-- <dependency> <groupId>org.seleniumhq.selenium</groupId> <artifactId>selenium-opera-driver</artifactId> 
-			<version>${selenium.version}</version> </dependency> -->
-
-
-		<!-- CUCUMBER -->
 		<!-- CUCUMBER-JAVA - https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
@@ -82,30 +44,13 @@
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- JUNIT -->
-		<!-- JUNIT 4 - https://mvnrepository.com/artifact/junit/junit -->
-		<!-- <dependency> <groupId>junit</groupId> <artifactId>junit</artifactId> 
-			<version>${junit.four.version}</version> <scope>test</scope> </dependency> -->
-
-		<!-- JUNIT JUPITER - https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-		<!-- <dependency> <groupId>org.junit.jupiter</groupId> <artifactId>junit-jupiter-api</artifactId> 
-			<version>${junit.jupiter.version}</version> <scope>test</scope> </dependency> -->
-
-
-		<!-- REST-ASSURED -->
-		<!-- REST-ASSURED - https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
-		<!-- <dependency> <groupId>io.rest-assured</groupId> <artifactId>rest-assured</artifactId> 
-			<version>${restassured.version}</version> </dependency> -->
-
-		<!-- REST-ASSURED COMMON - https://mvnrepository.com/artifact/io.rest-assured/rest-assured-common -->
-		<!-- <dependency> <groupId>io.rest-assured</groupId> <artifactId>rest-assured-common</artifactId> 
-			<version>${restassured.version}</version> </dependency> -->
-
-		<!-- GOOGLE CODE JSON SIMPLES -->
-		<!-- Google Code JSON Simple - https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
-		<!--<dependency> <groupId>com.googlecode.json-simple</groupId> <artifactId>json-simple</artifactId> 
-			<version>${googlesimplejson.version}</version> </dependency> -->
+		
+		<!-- Apache Commons IO - https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${apache.commons.io.version}</version>
+		</dependency>
 
 	</dependencies>
 
